// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionsList should merge and render references in order with the proper document titles 1`] = `
<div
  className="item-group"
>
  <Connect(Connection)
    key="ref4"
    reference={
      Object {
        "_id": "ref4",
        "associatedRelationship": Object {
          "entityData": Object {
            "_id": "1",
          },
        },
        "range": Object {
          "text": "",
        },
        "relationType": "rel1",
      }
    }
  />
  <Connect(Connection)
    key="ref2"
    reference={
      Object {
        "_id": "ref2",
        "associatedRelationship": Object {
          "entityData": Object {
            "_id": "1",
          },
        },
        "range": Object {
          "end": 8,
          "start": 0,
        },
        "relationType": "rel1",
      }
    }
  />
  <Connect(Connection)
    key="ref3"
    reference={
      Object {
        "_id": "ref3",
        "associatedRelationship": Object {
          "entityData": Object {
            "_id": "1",
          },
        },
        "range": Object {
          "end": 8,
          "start": 5,
        },
        "relationType": "rel1",
      }
    }
  />
  <Connect(Connection)
    key="ref1"
    reference={
      Object {
        "_id": "ref1",
        "associatedRelationship": Object {
          "entityData": Object {
            "_id": "1",
          },
        },
        "range": Object {
          "end": 20,
          "start": 10,
        },
        "relationType": "rel1",
      }
    }
  />
</div>
`;

exports[`ConnectionsList when there are no references should render a blank state message 1`] = `
<div
  className="blank-state"
>
  <Component
    icon="sitemap"
  />
  <h4>
    No Connections
  </h4>
  <p>
    No Connections description
  </p>
</div>
`;

exports[`ConnectionsList when there are no references should render a blank state message 2`] = `
<div
  className="blank-state"
>
  <Component
    icon="sitemap"
  />
  <h4>
    No References
  </h4>
  <p>
    No References description
  </p>
</div>
`;
